# open-data-product-berlin-gtfs-source-aligned

./: .gitignore  README.md  data-product-manifest.yml  data-transformation-02-silver.yml  data-transformation-03-gold.yml  dpds.yml  main.py  odps.yml  pyproject.toml
data/03-gold/berlin-public-transport-gtfs-2010-00/: berlin-public-transport-gtfs-2010-00-other.geojson
data/03-gold/berlin-public-transport-gtfs-2011-00/: berlin-public-transport-gtfs-2011-00-other.geojson
data/03-gold/berlin-public-transport-gtfs-2012-00/: berlin-public-transport-gtfs-2012-00-bus.geojson  berlin-public-transport-gtfs-2012-00-ferry.geojson  berlin-public-transport-gtfs-2012-00-other.geojson  berlin-public-transport-gtfs-2012-00-regional-train.geojson  berlin-public-transport-gtfs-2012-00-s-bahn.geojson  berlin-public-transport-gtfs-2012-00-tram.geojson  berlin-public-transport-gtfs-2012-00-u-bahn.geojson
data/03-gold/berlin-public-transport-gtfs-2013-00/: berlin-public-transport-gtfs-2013-00-bus.geojson  berlin-public-transport-gtfs-2013-00-ferry.geojson  berlin-public-transport-gtfs-2013-00-other.geojson  berlin-public-transport-gtfs-2013-00-regional-train.geojson  berlin-public-transport-gtfs-2013-00-s-bahn.geojson  berlin-public-transport-gtfs-2013-00-tram.geojson  berlin-public-transport-gtfs-2013-00-u-bahn.geojson
data/03-gold/berlin-public-transport-gtfs-2014-00/: berlin-public-transport-gtfs-2014-00-bus.geojson  berlin-public-transport-gtfs-2014-00-ferry.geojson  (+4 more)
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
lib/tranform/: graph_geojson_converter.py
(+62 files in other folders)
