[project]
name = "berlin-gtfs-source-aligned"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "networkx>=3.6.1",
    "open-data-product-python-lib",
    "osmnx>=2.0.7",
    "partridge>=1.1.2",
]

[tool.uv.sources]
open-data-product-python-lib = { git = "https://github.com/open-data-product/open-data-product-python-lib.git" }
